# api_test_demo

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  generate.yml
config/: tenants.yaml
mock_platform/: server.py
templates/: admin_apis.json  user_apis.json
tests/: test_admin_apis.py  test_fail.py  test_login.py  test_t2_acceptance.py  test_user_apis.py
utils/: api.py  auth.py  loader.py
