[project]
name = "multi-tenant-api-tests-demo"
version = "1.0.0"
description = "多平台 API 測試框架 demo（內建 mock 平台，零外部依賴）"
requires-python = ">=3.9"
dependencies = [
    "requests~=2.31",
    "pyyaml~=6.0",
    "pytest~=8.0",
]

[project.optional-dependencies]
ci = ["allure-pytest~=2.13"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
